--- a/Indicator/ViewPagerDotsIndicator/app/src/main/AndroidManifest.xml
+++ b/Indicator/ViewPagerDotsIndicator/app/src/main/AndroidManifest.xml
@@ -8,6 +8,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.DeviceDefault" />
-
+        android:theme="@android:style/Theme.DeviceDefault">
+        <activity
+            android:name=".WearPageIndicatorActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
