--- a/Indicator/ViewPagerDotsIndicator/gradle/libs.versions.toml
+++ b/Indicator/ViewPagerDotsIndicator/gradle/libs.versions.toml
@@ -1,9 +1,17 @@
 [versions]
 agp = "8.6.1"
 playServicesWearable = "18.0.0"
+recyclerview = "1.3.2"
+appcompat = "1.7.0"
+viewpager2 = "1.1.0"
+constraintlayout = "2.2.0"
 
 [libraries]
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
+constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
